# opencl_example

./: CMakeLists.txt  calc.comp.glsl  calc.spv  main.cpp
